Changes for 1.9

 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3rc3

 - [ZBX-2745] improved performance of screen element "History of events" (Aly)
 - [ZBX-2774] fixed GUI messaging in DM setup (Aly)
 - [ZBX-2803] fixed agent compilation on HP-UX with the native HP-UX C compiler (asaveljevs)
 - [ZBX-2786] fixed errors in trigger dependency mass update popup (Vedmak)
 - [ZBX-2536] fixed agent crash when processing proc.mem[] and proc.num[] on NetBSD (asaveljevs)
 - [ZBX-2671] fixed detection of various system headers during ./configure (asaveljevs)
 - [ZBX-2800] fixed undefined variable if update trigger with incorrect function (Vedmak)
 - [ZBX-2789] forbid active agent items to have 0 interval (Vedmak)
 - [ZBX-2794] fixed sorting in configuration web (Vedmak)
 - [ZBX-2792] fixed status sorting in maintenances (Vedmak)
 - [ZBX-2726] fixed statuses for discovery events (Vedmak)
 - [ZBX-2785] creation of empty slideshows prohibited (Vedmak)
 - [ZBX-2791] fixed host menu in "top 100 triggers" in ie7 (Vedmak)
 - [ZBX-2790] fixed maintenance times reset while configure maintenance (Vedmak)
 - [ZBX-2773] changed buttons css for DO theme (Vedmak)
 - [ZBX-2777] fixed map labels when "status only" option is set (Vedmak)
 - [ZBX-2775] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Vedmak)
 - [DEV-468] improved theme coloring in IE (Aly)

Changes for 1.8.3rc2

 - [ZBX-2767] fixed time stamp in german locales (Aly)
 - [ZBX-2764] fixed database monitor values not being accepted from proxy (asaveljevs,Sasha)
 - [ZBX-2752] improved text coloring (Aly)
 - [ZBX-2748] fixed compilation on OpenBSD 4.7 due to undefined KERN_PROC (asaveljevs)